02-orquestadores/ejercicios_prácticos/ejercicio2/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod
  namespace: ejercicio
  labels:
    app: backend
    created-by: backend-team
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"] # Keeps the pod running
