02-orquestadores/ejercicios_prácticos/ejercicio2/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
    created-by: backend-team
  namespace: ejercicio
spec:
  selector:
    matchLabels:
      app: backend
      created-by: backend-team
  template:
    metadata:
      labels:
        app: backend
        created-by: backend-team
    spec:
      containers:
      - name: backend
        image: lemoncodersbc/go-hello-world
        ports:
          - containerPort: 80
