02-orquestadores/ejercicios_prácticos/ejercicio2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingbackend
  namespace: ejercicio
  annotations:
    kubernetes.io/ingress.class: "nginx" # Use the NGINX Ingress Controller
    nginx.ingress.kubernetes.io/rewrite-target: "/" # Optional: Rewrite paths to match the root
spec:
  rules:
  - host: backend.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend
            port:
              number: 80
